docs/api/qiskit/0.29/qiskit.chemistry.algorithms.pes_samplers.PotentialBase.md
---
title: PotentialBase
description: API reference for qiskit.chemistry.algorithms.pes_samplers.PotentialBase
in_page_toc_min_heading_level: 1
python_api_type: class
python_api_name: qiskit.chemistry.algorithms.pes_samplers.PotentialBase
---

# PotentialBase

<span id="qiskit.chemistry.algorithms.pes_samplers.PotentialBase" />

`PotentialBase(molecule)` [GitHub](https://github.com/qiskit-community/qiskit-aqua/tree/stable/0.9/qiskit/chemistry/algorithms/pes_samplers/potentials/potential_base.py "view source code")

Bases: `qiskit.chemistry.algorithms.pes_samplers.potentials.potential_base.EnergySurfaceBase`, `qiskit.chemistry.algorithms.pes_samplers.potentials.potential_base.VibronicStructureBase`

Class to hold prescribed 1D potentials (e.g. Morse/Harmonic) over a degree of freedom.

## Methods

### dissociation\_energy

<span id="qiskit.chemistry.algorithms.pes_samplers.PotentialBase.dissociation_energy" />

`abstract PotentialBase.dissociation_energy(scaling=1.0)` [GitHub](https://github.com/qiskit-community/qiskit-aqua/tree/stable/0.9/qiskit/chemistry/algorithms/pes_samplers/potentials/potential_base.py "view source code")

Returns the dissociation energy (scaled by ‘scaling’)

**Return type**

`float`

### eval

<span id="qiskit.chemistry.algorithms.pes_samplers.PotentialBase.eval" />

`abstract PotentialBase.eval(x)`

After fitting the data to the fit function, predict the energy at a point x.

**Parameters**

**x** (`float`) – value to evaluate surface in

**Return type**

`float`

**Returns**

value of surface in point x

### fit

<span id="qiskit.chemistry.algorithms.pes_samplers.PotentialBase.fit" />

`abstract PotentialBase.fit(xdata, ydata, initial_vals=None, bounds_list=None)`

Fits surface to data

**Parameters**

*   **xdata** (`List`\[`float`]) – x data to be fitted
*   **ydata** (`List`\[`float`]) – y data to be fitted
*   **initial\_vals** (`Optional`\[`List`\[`float`]]) – Initial values for fit parameters. None for default. Order of parameters is d\_e, alpha, r\_0 and m\_shift (see fit\_function implementation)
*   **bounds\_list** (`Optional`\[`Tuple`\[`List`\[`float`], `List`\[`float`]]]) – Bounds for the fit parameters. None for default. Order of parameters is d\_e, alpha, r\_0 and m\_shift (see fit\_function implementation)

**Return type**

`None`

### get\_equilibrium\_geometry

<span id="qiskit.chemistry.algorithms.pes_samplers.PotentialBase.get_equilibrium_geometry" />

`abstract PotentialBase.get_equilibrium_geometry(scaling=1.0)`

Get the equilibrium energy.

Returns the geometry for the minimal energy (scaled by ‘scaling’) Default units (scaling=1.0) are Angstroms. Scale by 1E-10 to get meters.

**Parameters**

**scaling** (`float`) – scaling factor

**Return type**

`float`

**Returns**

equilibrium geometry

### get\_maximum\_trusted\_level

<span id="qiskit.chemistry.algorithms.pes_samplers.PotentialBase.get_maximum_trusted_level" />

`PotentialBase.get_maximum_trusted_level(n=0)`

Returns the maximum energy level for which the particular implementation still provides a good approximation of reality. Default value of 100. Redefined where needed (see e.g. Morse).

**Parameters**

**n** (`int`) – vibronic mode

**Return type**

`float`

**Returns**

maximum\_trusted\_level setted

### get\_minimal\_energy

<span id="qiskit.chemistry.algorithms.pes_samplers.PotentialBase.get_minimal_energy" />

`abstract PotentialBase.get_minimal_energy(scaling=1.0)`

Get the minimal energy.

Returns the value of the minimal energy (scaled by ‘scaling’) Default units (scaling=1.0) are J/mol. Scale appropriately for Hartrees.

**Parameters**

**scaling** (`float`) – scaling factor

**Return type**

`float`

**Returns**

minimum energy

### get\_num\_modes

<span id="qiskit.chemistry.algorithms.pes_samplers.PotentialBase.get_num_modes" />

`PotentialBase.get_num_modes()` [GitHub](https://github.com/qiskit-community/qiskit-aqua/tree/stable/0.9/qiskit/chemistry/algorithms/pes_samplers/potentials/potential_base.py "view source code")

This (1D) potential represents a single vibrational mode

**Return type**

`int`

### get\_trust\_region

<span id="qiskit.chemistry.algorithms.pes_samplers.PotentialBase.get_trust_region" />

`PotentialBase.get_trust_region()` [GitHub](https://github.com/qiskit-community/qiskit-aqua/tree/stable/0.9/qiskit/chemistry/algorithms/pes_samplers/potentials/potential_base.py "view source code")

The potential will usually be well-defined (even if not useful) for arbitrary x so we return a fairly large interval here. Redefine in derived classes if needed.

**Return type**

`Tuple`\[`float`, `float`]

### update\_molecule

<span id="qiskit.chemistry.algorithms.pes_samplers.PotentialBase.update_molecule" />

`PotentialBase.update_molecule(molecule)`

Wipe state if molecule changes, and check validity of molecule for potential.

**Parameters**

**molecule** (`Molecule`) – chemistry molecule

**Return type**

`Molecule`

**Returns**

molecule used

### vibrational\_energy\_level

<span id="qiskit.chemistry.algorithms.pes_samplers.PotentialBase.vibrational_energy_level" />

`abstract PotentialBase.vibrational_energy_level(n)`

Returns the n-th vibrational energy level for a given mode.

**Parameters**

**n** (`int`) – number of vibrational mode

**Return type**

`float`

**Returns**

n-th vibrational energy level for a given mode

